test/pending/pos/bug578.scala
object Test {
  val x = Nil
  val x2: Nil = x
  val y = None
  val y2:None = y
  Console.println("Okay")
}
