test/pending/neg/plugin-rightafter-terminal/testsource.scala
object Test extends Application {
  println("rightafterterminal")
}

